# openenclave

./: Dockerfile  Jenkinsfile  azure-pipelines.yml  cac.yml  fuzz_test.sh  fuzztest.patch  global-libs.yml  h  skaffold.yaml
.jenkins/: Dockerfile.deploy  Dockerfile.minimal  Jenkinsfile  build_azure_managed_images.Jenkinsfile
.jenkins/infrastructure/: build_azure_managed_images.Jenkinsfile
charts/openenclave/: Chart.yaml  Makefile  values.yaml
charts/preview/: Makefile  requirements.yaml
cmake/: cpack_settings.cmake  openenclaverc.in
docs/GettingStartedDocs/Contributors/: AdvancedBuildInfo.md  WindowsSGX1FLCGettingStarted.md  WindowsSGX1GettingStarted.md  WindowsSimulatorGettingStarted.md
host/crypto/bcrypt/: key.c
samples/attested_tls/common/: tls_server_enc_mrenclave.h
samples/attested_tls/non_enc_client/: tls_non_enc_client
samples/data-sealing/common/: datasealing_t.c  datasealing_t.h
samples/data-sealing/enclave_a_v1/: enclave_a_v1  enclave_a_v1.signed  private.pem  public.pem
samples/data-sealing/enclave_a_v2/: enclave_a_v2  enclave_a_v2.signed  private.pem
samples/data-sealing/enclave_b/: enclave_b  enclave_b.signed  private.pem  public.pem
samples/data-sealing/host/: data-sealing_host  datasealing_args.h  datasealing_u.c  datasealing_u.h
samples/file-encryptor/enclave/: file-encryptorenc  file-encryptorenc.signed  fileencryptor_t.c  fileencryptor_t.h  private.pem  public.pem
samples/file-encryptor/host/: file-encryptorhost  fileencryptor_args.h  fileencryptor_u.c  fileencryptor_u.h
scripts/: Dockerfile  build.cmd  cleanup.cmd  install-windows-prereqs.ps1  install.cmd
scripts/ansible/: ansible.cfg  oe-windows-acc-setup.yml  oe-windows-nonSGX-setup.yml
tests/: CMakeLists.txt
tests/fuzztests/: CMakeLists.txt  qeidentityparser.cpp  remote_verify.cpp  tcbinfoparser.cpp
tests/fuzztests/seeds/qeidentity/: qeidentity.json
tests/fuzztests/seeds/remoteverify/: remoteverify.bytes
tests/fuzztests/seeds/tcbinfoparser/: tcbInfoNegativeCompSvn.json  tcbInfoNegativeFloat.json  tcbInfoNegativeIntegerOverflow.json  tcbInfoNegativeIntegerWithSign.json  tcbInfoNegativePceSvn.json  tcbInfoNegativeSignature.json  tcbInfoNegativeStringEscape.json
tests/oeedger8r/: CMakeLists.txt
(+82 files in other folders)
